--- a/package.json
+++ b/package.json
@@ -7,7 +7,7 @@
     "compile": "tsc",
     "pretest": "rimraf app/**/*.js test/**/*.js",
     "test": "nyc mocha",
-    "start": "tsc && node test/golden-master-text-test.js"
+    "start": "tsc --outDir ./dist/ && node ./dist/test/golden-master-text-test.js"
   },
   "license": "MIT",
   "private": true,
@@ -16,12 +16,17 @@
     "@types/mocha": "~2.2.41",
     "@types/node": "~7.0.18",
     "chai": "~3.5.0",
-    "mocha": "~3.2.0",
-    "nyc": "~11.0.3",
+    "mocha": "^3.2.0",
+    "nyc": "^11.0.3",
     "rimraf": "~2.5.2",
     "source-map-support": "0.5.9",
     "ts-node": "~3.1.0",
     "typescript": "~3.0.3"
+  },
+  "mocha": {
+    "require": [
+      "source-map-support/register"
+    ]
   },
   "nyc": {
     "extension": [
